# heulpad

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml  update-homebrew.yml
man/: heulpad-enable.1  heulpad-new.1  heulpad.1
src/: main.cpp
src/commands/: CMakeLists.txt
src/commands/enable/: CMakeLists.txt  main.cpp
src/commands/help/: CMakeLists.txt  main.cpp
src/commands/new/: CMakeLists.txt  main.cpp
